# whiptail

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  demo.py  formate.toml  git_helper.yml  lint_roller.sh  old_setup.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini  whiptail.py
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  example.py  example.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
whiptail/: __init__.py  demo.py  test.py
