# coding: utf-8
# This file is managed by 'repo_helper'. Don't edit it directly.

[metadata]
name = whiptail-dialogs
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = BSD License
keywords =
    dialog
    console
    whiptail
    utility
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    macOS
    Linux
url = https://github.com/domdfcoding/whiptail
project_urls =
    Documentation = https://whiptail.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/whiptail/issues
    Source_Code = https://github.com/domdfcoding/whiptail
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source
